@@ -150,7 +150,6 @@ export(nsentence)
 export(ntoken)
 export(ntype)
 export(phrasetotoken)
-export(phrasetotoken.corpus)
 export(quantedaformat2dtm)
 export(readability)
 export(removeFeatures)
