@@ -5,7 +5,7 @@
 \alias{phrasetotoken}
 \alias{phrasetotoken,character,collocations-method}
 \alias{phrasetotoken,character,dictionary-method}
-\alias{phrasetotoken.corpus}
+\alias{phrasetotoken,corpus,ANY-method}
 \title{convert phrases into single tokens}
 \usage{
 phrasetotoken(object, phrases, concatenator = "_")
@@ -13,7 +13,7 @@ phrasetotoken(object, phrases, concatenator = "_")
 \S4method{phrasetotoken}{character,dictionary}(object, phrases,
   concatenator = "_")
 
-phrasetotoken.corpus(object, phrases, concatenator = "_")
+\S4method{phrasetotoken}{corpus,ANY}(object, phrases, concatenator = "_")
 
 \S4method{phrasetotoken}{character,collocations}(object, phrases,
   concatenator = "_")
